# nuachat

./: .gitignore  LICENSE  README.md
crates/nuachat-core/: Cargo.toml
crates/nuachat-core/src/: main.rs
crates/nuachat-core/src/ai/: mock.rs  mod.rs  ollama.rs  router.rs
crates/nuachat-core/src/ai/models/: chat.rs
frontend/: package-lock.json
frontend/src/: App.tsx  index.css  useTheme.ts
frontend/src/components/: Dropdown.tsx
