[package]
name = "nuachat-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tao = "0.34"
wry = "0.54"
gtk = "0.18"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.32"
